[gd_scene load_steps=34 format=3 uid="uid://bnkcsqjtokxh6"]

[ext_resource type="Script" uid="uid://cknif7bnpg03r" path="res://code/player_controller.gd" id="1_dax7f"]
[ext_resource type="PackedScene" uid="uid://c6a8g6f8v8x8w" path="res://assets/UI/ui_layer.tscn" id="2_abcde"]
[ext_resource type="PackedScene" uid="uid://b1h2w3x4y506" path="res://assets/red_box.tscn" id="3_defgh"]
[ext_resource type="Script" uid="uid://cwqpmt7podyst" path="res://code/components/shooting_component.gd" id="4_shooting"]
[ext_resource type="Script" uid="uid://dtiaujqfhaeas" path="res://code/components/weapon_component.gd" id="5_weapon"]

[sub_resource type="ProceduralSkyMaterial" id="6"]
sky_top_color = Color(0.317647, 0.705882, 0.94902, 1)
sky_horizon_color = Color(0.647059, 0.823529, 0.941176, 1)

[sub_resource type="Sky" id="4"]
sky_material = SubResource("6")

[sub_resource type="Environment" id="5"]
background_mode = 2
sky = SubResource("4")
ambient_light_color = Color(0.4, 0.4, 0.4, 1)
ambient_light_energy = 0.5

[sub_resource type="StandardMaterial3D" id="3"]
albedo_color = Color(1, 0.47451, 0, 1)

[sub_resource type="PlaneMesh" id="1"]
size = Vector2(1000, 1000)

[sub_resource type="BoxShape3D" id="2"]
size = Vector3(1000, 2, 1000)

[sub_resource type="CapsuleShape3D" id="7"]

[sub_resource type="CapsuleMesh" id="8"]

[sub_resource type="StandardMaterial3D" id="9"]

[sub_resource type="CylinderMesh" id="10"]
top_radius = 0.7
bottom_radius = 0.7
height = 0.05

[sub_resource type="StandardMaterial3D" id="11"]
albedo_color = Color(0, 1, 0, 1)
emission_enabled = true
emission = Color(0, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_h2yge"]
size = Vector3(2, 0.6, 3.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bvp3"]
albedo_color = Color(0.25, 0.3, 0.2, 1)
metallic = 0.3
roughness = 0.8

[sub_resource type="CylinderMesh" id="CylinderMesh_lquwl"]
top_radius = 0.08
bottom_radius = 0.08
height = 0.08

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7mycd"]
albedo_color = Color(1, 1, 0, 1)
emission_enabled = true
emission = Color(1, 1, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_272bh"]
top_radius = 0.08
bottom_radius = 0.08
height = 0.08

[sub_resource type="BoxMesh" id="BoxMesh_5vw27"]
size = Vector3(1.5, 0.4, 2.2)

[sub_resource type="BoxMesh" id="BoxMesh_kek77"]
size = Vector3(0.2, 0.5, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4c57u"]
albedo_color = Color(0.15, 0.2, 0.15, 1)
metallic = 0.2
roughness = 0.9

[sub_resource type="BoxMesh" id="BoxMesh_efxa6"]
size = Vector3(0.2, 0.5, 3)

[sub_resource type="CylinderMesh" id="CylinderMesh_h2yge"]
top_radius = 0.6
bottom_radius = 0.6
height = 0.5
radial_segments = 32

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2cqfq"]
albedo_color = Color(0.4, 0.4, 0.4, 1)
metallic = 0.5
roughness = 0.6

[sub_resource type="CylinderMesh" id="CylinderMesh_074og"]
top_radius = 0.15
bottom_radius = 0.15
height = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_cegan"]
top_radius = 0.65
bottom_radius = 0.65
height = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w48qg"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.4
roughness = 0.8

[sub_resource type="CylinderMesh" id="CylinderMesh_82xsv"]
top_radius = 0.03
bottom_radius = 0.03
height = 0.3

[sub_resource type="CylinderMesh" id="CylinderMesh_getpj"]
top_radius = 0.15
bottom_radius = 0.15
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ryguw"]
albedo_color = Color(0.3, 0.3, 0.3, 1)
metallic = 0.6
roughness = 0.7

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("5")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="FloorMesh" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(2.08687, 0, 0, 0, 2.08687, 0, 0, 0, 2.08687, 4.90941, 1.09819, 3.29891)
material_override = SubResource("3")
mesh = SubResource("1")

[node name="FloorCollision" type="CollisionShape3D" parent="Floor"]
shape = SubResource("2")

[node name="SunLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)
shadow_enabled = true

[node name="OverheadLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 192.266, 0)
light_energy = 3.0
light_size = 1.0
shadow_enabled = true
spot_range = 275.757

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("1_dax7f")

[node name="PlayerCollision" type="CollisionShape3D" parent="Player"]
shape = SubResource("7")

[node name="PlayerMesh" type="MeshInstance3D" parent="Player"]
mesh = SubResource("8")
surface_material_override/0 = SubResource("9")

[node name="SelectionRing" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
mesh = SubResource("10")
surface_material_override/0 = SubResource("11")

[node name="TankHull" type="MeshInstance3D" parent="Player"]
visible = false
mesh = SubResource("BoxMesh_h2yge")
surface_material_override/0 = SubResource("StandardMaterial3D_1bvp3")

[node name="HeadlightLeft" type="MeshInstance3D" parent="Player/TankHull"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, 0.1, -1.2)
mesh = SubResource("CylinderMesh_lquwl")
surface_material_override/0 = SubResource("StandardMaterial3D_7mycd")

[node name="HeadlightRight" type="MeshInstance3D" parent="Player/TankHull"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.5, 0.1, -1.2)
mesh = SubResource("CylinderMesh_272bh")
surface_material_override/0 = SubResource("StandardMaterial3D_7mycd")

[node name="HullTop" type="MeshInstance3D" parent="Player/TankHull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.2)
mesh = SubResource("BoxMesh_5vw27")
surface_material_override/0 = SubResource("StandardMaterial3D_1bvp3")

[node name="TrackLeft" type="MeshInstance3D" parent="Player/TankHull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.3, 0)
mesh = SubResource("BoxMesh_kek77")
surface_material_override/0 = SubResource("StandardMaterial3D_4c57u")

[node name="TrackRight" type="MeshInstance3D" parent="Player/TankHull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.3, 0)
mesh = SubResource("BoxMesh_efxa6")
surface_material_override/0 = SubResource("StandardMaterial3D_4c57u")

[node name="Turret" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
visible = false

[node name="TurretMesh" type="MeshInstance3D" parent="Player/Turret"]
mesh = SubResource("CylinderMesh_h2yge")
surface_material_override/0 = SubResource("StandardMaterial3D_2cqfq")

[node name="TurretHatch" type="MeshInstance3D" parent="Player/Turret/TurretMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.35, 0.2)
mesh = SubResource("CylinderMesh_074og")
surface_material_override/0 = SubResource("StandardMaterial3D_2cqfq")

[node name="TurretRing" type="MeshInstance3D" parent="Player/Turret/TurretMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
mesh = SubResource("CylinderMesh_cegan")
surface_material_override/0 = SubResource("StandardMaterial3D_w48qg")

[node name="MachineGun" type="MeshInstance3D" parent="Player/Turret/TurretMesh"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.4, 0.1, -0.5)
mesh = SubResource("CylinderMesh_82xsv")
surface_material_override/0 = SubResource("StandardMaterial3D_w48qg")

[node name="SpringArm3D" type="SpringArm3D" parent="Player/Turret"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.43901, 0.5, 0)
collision_mask = 0
spring_length = 8.0

[node name="TankCamera" type="Camera3D" parent="Player/Turret/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.955335, 0.295524, 0, -0.295524, 0.955335, 0.0373135, 0.518288, 3.15768)

[node name="BarrelPivot" type="Node3D" parent="Player/Turret"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="TankGunBarrel" type="MeshInstance3D" parent="Player/Turret/BarrelPivot"]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, -0.23779, -1.3)
mesh = SubResource("CylinderMesh_getpj")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_ryguw")

[node name="ShootingComponent" type="Node" parent="Player"]
script = ExtResource("4_shooting")

[node name="WeaponComponent" type="Node3D" parent="Player"]
script = ExtResource("5_weapon")

[node name="PlayerCamera" type="Node3D" parent="Player"]

[node name="SpringArm3D" type="SpringArm3D" parent="Player/PlayerCamera"]
collision_mask = 0
spring_length = 5.0

[node name="Camera3D" type="Camera3D" parent="Player/PlayerCamera/SpringArm3D"]

[node name="ObserverCamera" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 10)

[node name="RedBox" parent="." instance=ExtResource("3_defgh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -9.10316)

[node name="UILayer" parent="." instance=ExtResource("2_abcde")]
